--- a/site/footer.css
+++ b/site/footer.css
@@ -1,21 +1,18 @@
-footer {
-    width: 100%;
-    height: 100%;
-    top: -28px;
-    gap: 0px;
-    opacity: 0px;
-    background-color: #2E2E2E;
-    padding: 70px 200px;
-}
 
 .search-box2 {
     position: relative;
-    width: 20vw;
+    width: 492px;
 
 }
 
+.backgroundColorFooter{
+    background-color: #2E2E2E;
+}
+.padding-70{
+    padding: 70px;
+}
 .search-box2 input {
-    width: 100%;
+    width: 492px;
     height: 40px;
     padding: 20px;
     /* Khoảng cách bên phải cho nút */
@@ -63,7 +60,7 @@ footer {
 .footer-head {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
 }
 
 .register {
