--- a/site/responsive.css
+++ b/site/responsive.css
@@ -48,7 +48,7 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     /* Nền tối mờ */
-    z-index: 1;
+    z-index: 25;
     /* Dưới thanh điều hướng */
   }
 
@@ -243,7 +243,8 @@
   .header-search {
     display: none;
   }
-  .button-search span{
+
+  .button-search span {
     display: none;
   }
 
@@ -312,6 +313,8 @@
   .info-user-fixed-right span:active {
     scale: 1.2;
   }
+
+  .info-user-fixed-right
 }
 
 @media only screen and (max-width: 515px) {
@@ -330,8 +333,9 @@
   .main-9-container-tab {
     flex: 1 0 100%;
   }
-  .wrapper3 .swiper-slide{
-    height: 180px;
+
+  .wrapper3 .swiper-slide {
+    height: 210px;
   }
 }
 
@@ -368,7 +372,7 @@
   }
 
   .main-2-right .infor-product-head img {
-    width: 50%;
+    width: 60%;
   }
 
   .main-6-left-bottom-price {
@@ -394,13 +398,15 @@
   .nav-search {
     display: block;
   }
-  .main-6-left-bottom-price{
+
+  .main-6-left-bottom-price {
     flex-wrap: wrap;
   }
-.catalog-popup {
-  width: 70%;
-  font-size: 15px;
-}
+
+  .catalog-popup {
+    width: 70%;
+    font-size: 15px;
+  }
 
 
   /* Ô tìm kiếm nổi bên dưới navbar */
@@ -493,5 +499,11 @@
     font-size: 12px;
     top: 0;
   }
-
+  .main3-flashsale-left span:first-child{
+    font-size: 20px;
+  }
+  .main3-flashsale{
+    flex-direction: column;
+    align-items: center;
+  }
 }
